--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,9 @@
       }
     ]
   ],
-  "plugins": ["xwind/babel", "@emotion/babel-plugin"]
+  "plugins": [
+    "@emotion/babel-plugin",
+    "babel-plugin-twin",
+    "babel-plugin-macros"
+  ]
 }
