--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "11.3.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "firebase": "^8.7.1",
+    "react-icons": "^4.2.0",
     "tailwindcss-filters": "3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@emotion/babel-plugin": "11.3.0",
-    "autoprefixer": "^10.2.6",
-    "next": "latest",
-    "postcss": "^8.3.5",
+    "@babel/core": "^7.14.6",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "babel-plugin-twin": "1.0.2",
     "tailwindcss": "^2.2.4",
-    "xwind": "0.8.0"
+    "twin.macro": "^2.5.0"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
   },
   "license": "MIT"
 }
